Fix header z-index(logout button)

--- a/DocuSign.MyHR/DocuSign.MyHR/ClientApp/src/styles/scss/layouts/_header.scss
+++ b/DocuSign.MyHR/DocuSign.MyHR/ClientApp/src/styles/scss/layouts/_header.scss
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   top: 0;
+  z-index: 1;
   background-color: $white;
   @include media-breakpoint-up(lg) {
     padding-top: 25px;
